Center aligned login and registration cards, set footer to fixed position

--- a/client/src/app/footer/footer.component.scss
+++ b/client/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 footer {
-  position: sticky;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   background-color: #ddd;
